# oatmeal

./: .rustfmt.toml  .taplo.toml  Cargo.toml  Makefile.toml  build.rs  config.example.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: update-dependencies.yaml
src/: main.rs
src/application/: cli.rs  ui.rs
src/configuration/: config.rs  config_test.rs
src/domain/models/: author.rs  backend.rs  editor.rs  event.rs  loading.rs  message.rs  slash_commands.rs  textarea.rs
src/domain/services/: actions.rs  app_state.rs  app_state_test.rs  bubble.rs  bubble_list.rs  bubble_test.rs  clipboard.rs  code_blocks.rs  events.rs  sessions.rs  syntaxes.rs  themes.rs
src/infrastructure/backends/: claude.rs  claude_test.rs  gemini.rs  gemini_test.rs  langchain.rs  langchain_test.rs  mod.rs  ollama.rs  ollama_test.rs  openai.rs  openai_test.rs
src/infrastructure/editors/: clipboard.rs  mod.rs  neovim.rs  noop.rs
test/utils/: Cargo.toml
test/utils/src/: lib.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: hash_assets.rs
