cargo-features = ["codegen-backend"]

[package]
name = "oatmeal"
version = "0.13.0"
authors = ["Dustin Blackman"]
build = "build.rs"
edition = "2021"
exclude = [
  "tools",
  "test",
  ".cargo-husky/",
  ".github/",
  ".goreleaser.yml",
  ".rustfmt.toml",
  "cliff.toml",
  "committed.toml",
  "deny.toml"
]
keywords = ["cli", "llm", "chat", "tui"]
license = "MIT"
repository = "https://github.com/dustinblackman/oatmeal"
description = "Terminal UI to chat with large language models (LLM) using different model backends, and direct integrations with your favourite editors!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []
dhat-heap = ["dep:dhat"]

[workspace]
members = ["tools/xtask"]

[dependencies]
anyhow = { version = "=1.0.95", features = ["backtrace"] }
arboard = { version = "=3.4.1", default-features = false, features = ["wayland-data-control"] }
async-trait = "=0.1.83"
base64 = "=0.22.1"
better-panic = "=0.3.0"
bincode = "=1.3.3"
cargo-run-bin = { version = "1.7.2", default-features = false }
chrono = { version = "=0.4.39", default-features = false, features = ["clock"] }
clap = { version = "=4.5.23", features = ["env", "string"] }
clap_complete = "=4.5.40"
clap_mangen = { version = "=0.2.24" }
crossterm = { version = "=0.28.1", features = ["bracketed-paste", "event-stream"] }
dashmap = "=6.1.0"
dhat = { version = "=0.3.3", optional = true }
dialoguer = { version = "=0.11.0", default-features = false, features = ["editor"] }
dirs = "=5.0.1"
dirs-sys = "=0.4.1" # Pinned sub dependency to avoid poor choices in later versions.
futures = "=0.3.31"
itertools = "=0.13.0"
once_cell = "=1.20.2"
ratatui = "=0.29.0"
regex = "=1.11.1"
reqwest = { version = "=0.12.11", default-features = false, features = [
  "stream",
  "json",
  "gzip",
  "rustls-tls-native-roots"
] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.134"
serde_yaml = "=0.9.34"
strum = { version = "=0.26.3", features = ["derive"] }
syntect = { version = "=5.2.0", default-features = false, features = [
  "parsing",
  "plist-load",
  "regex-onig"
] }
tokio = { version = "=1.42.0", features = ["fs", "macros", "rt-multi-thread", "sync", "process"] }
tokio-util = "=0.7.13"
toml_edit = "=0.22.22"
tracing = { version = "=0.1.41", default-features = false, features = ["std", "log"] }
tracing-appender = "=0.2.3"
tracing-subscriber = { version = "=0.3.19", default-features = false, features = ["json"] }
tui-textarea = { version = "=0.7.0", default-features = false, features = ["crossterm", "ratatui"] }
uuid = { version = "=1.11.0", features = ["v4"] }
yansi = "=1.0.1"

# Fix for cargo-about
[target.'cfg(target_os="macos")'.dependencies]
errno = "=0.3.10"

[dev-dependencies]
cargo-husky = { version = "=1.5.0", default-features = false, features = ["user-hooks"] }
insta = { version = "=1.41.1", features = ["toml", "yaml"] }
mockito = "=1.6.1"
tempfile = "=3.14.0"
test_utils = { path = "./test/utils" }

[build-dependencies]
anyhow = "=1.0.95"
bincode = "=1.3.3"
flate2 = "=1.0.35"
glob-match = "=0.2.1"
reqwest = { version = "=0.12.11", default-features = false, features = [
  "blocking",
  "rustls-tls-native-roots"
] }
serde = { version = "=1.0.217", features = ["derive"] }
syntect = { version = "=5.2.0", default-features = false, features = [
  "parsing",
  "default-syntaxes",
  "plist-load",
  "yaml-load",
  "regex-onig"
] }
tar = "=0.4.43"
toml = "=0.8.19"
vergen = { version = "=8.2.5", features = ["build", "git", "gitcl"] }
walkdir = { version = "=2.5.0" }

[package.metadata.bin]
cargo-about = { version = "0.6.6", locked = true }
cargo-binstall = { version = "1.10.13", locked = true }
cargo-cmd = { version = "0.3.1", locked = true }
cargo-deny = { version = "0.16.2", locked = true }
cargo-gha = { version = "1.0.2", locked = true }
cargo-insta = { version = "1.41.1", locked = true }
cargo-llvm-cov = { version = "0.6.14", locked = true }
cargo-nextest = { version = "0.9.84", locked = true }
cargo-watch = { version = "8.5.3", locked = true }
cargo-xwin = { version = "0.17.3", locked = true }
cargo-zigbuild = { version = "0.19.4", locked = true }
committed = { version = "1.1.1", locked = true }
flamegraph = { version = "0.6.5", bins = ["cargo-flamegraph"], locked = true }
git-cliff = { version = "2.7.0", locked = true }
mise = { version = "2024.11.23", locked = true }
samply = { version = "0.12.0", locked = true }

[profile.release]
codegen-units = 1
debug = 1                  # Limited
lto = true
opt-level = 3
split-debuginfo = "packed"
strip = "symbols"

[profile.release-windows]
inherits = "release"
strip = "none"

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[package.metadata.gha]
targets = ["aarch64-apple-darwin"]

[[package.metadata.gha.assets]]
owner_repo = "goreleaser/goreleaser"
tag = "v1.23.0"
binaries = ["goreleaser"]
target_archives = { aarch64-apple-darwin = "goreleaser_Darwin_arm64.tar.gz" }

[[package.metadata.gha.assets]]
owner_repo = "cli/cli"
tag = "v2.40.1"
binaries = ["gh"]
target_archives = { aarch64-apple-darwin = "gh_{NOVTAG}_macOS_arm64.zip" }

[package.metadata.commands]
build-completions = '''set -e
  rm -rf completions
  mkdir completions
  ./target/debug/oatmeal completions -s zsh > completions/oatmeal.zsh
  ./target/debug/oatmeal completions -s bash > completions/oatmeal.bash
  ./target/debug/oatmeal completions -s fish > completions/oatmeal.fish
'''

dev = '''set -e
  cargo watch -i .cargo -s 'cargo run --features dev -- --model=codellama:latest'
'''

dev-install = '''set -e
  cargo build --release
  rm -f $HOME/.cargo/bin/oatmeal
  mv ./target/release/oatmeal $HOME/.cargo/bin/
'''

lint = '''set -e
  cargo cmd setup-nightly
  cargo +oatmeal-nightly fmt -- --check
  cargo clippy
  cargo deny check licenses -s
  cargo bin mise install
  cargo bin mise x -C tools/node -- npm ci
  cargo bin mise x -C tools/node -- npm run prettier-check
'''

lint-fix = '''set -e
  cargo cmd setup-nightly
  cargo clippy --fix --allow-dirty
  cargo fix --allow-dirty
  cargo +oatmeal-nightly fmt
  cargo bin mise install
  cargo bin mise x -C tools/node -- npm ci
  cargo bin mise x -C tools/node -- npm run prettier-write
'''

get-nightly-name = 'echo oatmeal-nightly'
setup-nightly = '''
  export NIGHTLY=nightly-2024-12-25
  rustup toolchain list -v | grep -q "$NIGHTLY" || rustup toolchain install "$NIGHTLY" --force --component llvm-tools-preview rustfmt
  rustup toolchain link oatmeal-nightly "$(rustup toolchain list -v | grep $NIGHTLY | grep '^nightly-' | awk '{print $2}')"
'''

release = '''
  ./tools/release.sh
'''

insta = '''set -e
  cargo insta test --bins --test-runner nextest || cargo insta review
'''

setup = '''set -e
  cargo bin --install
  cargo cmd setup-nightly
  cargo cmd test
'''

test = '''set -e
  cargo nextest run
'''

test-coverage = '''set -e
  cargo llvm-cov nextest --ignore-filename-regex='_test.rs'
'''
test-coverage-html = '''set -e
  cargo llvm-cov nextest --open --ignore-filename-regex='_test.rs'
'''
test-coverage-lcov = '''set -e
  rm -f lcov.info
  cargo llvm-cov nextest --lcov --output-path lcov.info --ignore-filename-regex='_test.rs'
'''
test-coverage-ci = '''set -e
  cargo llvm-cov nextest --html --output-dir ./coverage --ignore-filename-regex='_test.rs'
'''
test-watch = '''set -e
  cargo watch -i .cargo -x 'cmd test'
'''

thirdparty = '''set -e
  cargo deny check licenses
  ./tools/thirdparty/run.sh
'''

top = '''
  top -pid $(ps aux | grep 'target\/release\/oatmeal' | awk '{print $2}')
'''
